Created AddTaxiCentralForm Refactored GlobalConfig Added Enums.cs Added and implemented CreateTaxiCentral in SqlConnector Edited Program.cs

--- a/TDSM.UI.WinForms/App.config
+++ b/TDSM.UI.WinForms/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="TDMSDatabase" connectionString="Server=.\MSSQLLocalDB;Database=TDMSDatabase;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
+    <add name="TDMSDatabase" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TDMSDatabase;Integrated Security=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
