--- a/TDSM.Data.Lib/TDSM.Data.Lib.csproj
+++ b/TDSM.Data.Lib/TDSM.Data.Lib.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
